[tool.poetry]
name = "ncli"
version = "0.1.0"
description = "CLI for exporting and synthesizing notes into Git-trackable files."
authors = ["Steven Wijaya <stevenwjy149@gmail.com>"]
license = "MIT OR AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
audible = "^0.8.2"
beautifulsoup4 = "^4.11.1"
chardet = "^4.0.0"
click = "^8.1.3"
httpx = "^0.23.3"
openai = "^0.27.6"
pydantic = "^1.10.7"
pytube = "^15.0.0"
requests = "^2.31.0"
toml = "^0.10.2"
youtube_transcript_api = "^0.5.0"

[tool.poetry.scripts]
ncli = 'ncli.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
